--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Web Development Intern</h4>
               <h5>Dec, 2020 - Present</h5>
               <p><em>GoBikes, New Delhi</em></p>
@@ -288,7 +288,7 @@
                 <li>Implemented the Front End of the website using ReactJS</li>
                 <li>Implemented Backend using NodeJS and Firebase</li>
               </ul>
-            </div>
+            </div> -->
             <div class="resume-item">
               <h4>Software Engineer</h4>
               <h5>Aug,2019 - Nov, 2019</h5>
